starspan ChangeLog
$Id$

2006-3-25: perrygeo
      - configure.in to version 0.998
      - src/tranverser/polyqt.cc : relative epsilon instead of constant

2006-03-24:  perrygeo
      - Exposed the SUM statistic
      - Removed NoData/Null Values from the stats calculations
      - Calculate two new stats: MEDIAN and NULLS (ie number of nodata
	values)
        
2005-11-17
	tests/misc/LFS/: new code to test LFS

2005-08-18 (0.997)
	- 0.997 created to synchronize the whole thing. 
	
2005-08-17 (0.996)
	- mksrcdist.sh: set DISTDIR to /tmp/DISTDIR-starspan/
	  The problem was that ./reconf on the exported contents was not
	  creating the files depcomp, missing, and install-sh, required
	  for a successfull ./configure; make; ... on the user machine.
	  It seems the reason is that automake finds those files in ../ or
	  ../../ and then doesn't create new copies. I looked for an
	  option to force automake to create those files but didn't find
	  any; so a simple solution is to create the distribution in a
	  different directory not descending from this one.
	
2005-07-04 (0.996)
	Refactoring on management of set of visited pixels (pixset) with
	the goal of optimizing memory usage in the case of big features:

	Traverser.h declares new classes PixSet and PixSet::Iterator 
	New source file: pixset.cc
	
	PixSet abstracts the operations on a set of pixel locations and
	PixSet::Iterator provides a means to scan the contained locations
	in the set (I have followed the Java style for the iterator
	instead of the C++ one).
	
	The first implementation of PixSet and PixSet::Iterator is based 
	on the set<EPixel> structure as in the previous version; this is
	a preliminary test before using a different approach.
	
	
2005-07-01 (0.995)
	- Traverser: Put some variables as instance member to avoid
	  recomputation: pix_abs_area, pixelProportion_times_pix_abs_area.
	  
	- Traverser::rasterize_poly_QT revisited: